[FEAT]: Init FE project
